# clinvarome

./: .gitlab-ci.yml  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg
clinvarome/: clinvarome_annotation.py  clinvarome_annotation_functions.py
clinvarome/utils/: dictionary.py
tests/: test_clinvarome.py
tests/full_data/: clinvar_GRCh38_2020-11.vcf  clinvarome_20201031.tsv  compare-gene_total.tsv  compare-variant_total.tsv
tests/integration/: test_pipeline.py
tests/toys/: clinvar_gnomad_anno.vcf  clinvarome.tsv  compare-gene.tsv  compare-variant.tsv
