[tool.poetry]
name = "clinvarome"
version = "0.1.0"
description = ""
authors = ["Denis Bertrand <denis.bertrand@seqone.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.4"
numpy = "^1.19.4"
pyselib = "^1.48.0"
sklearn = "^0.0"
scipy = "^1.5.4"
joblib = "^0.17.0"
threadpoolctl = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
pylint = "^2.6.0"

[[tool.poetry.source]]
name = "seqone"
url = "https://pypi.seq.one/"
default = true
